--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -1,34 +1,18 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: quotes-api
-  labels:
-    app: quotes-api
-spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: quotes-api
-  template:
-    metadata:
-      labels:
-        app: quotes-api
-    spec:
-      containers:
-        - name: quotes-api
-          image: REGISTRY_URL/REGISTRY_NAMESPACE/quotes-api:IMAGE_TAG
-          imagePullPolicy: Always
-          ports:
-            - containerPort: 8000
-          readinessProbe:
-            httpGet:
-              path: /healthz
-              port: 8000
-            initialDelaySeconds: 3
-            periodSeconds: 5
-          livenessProbe:
-            httpGet:
-              path: /healthz
-              port: 8000
-            initialDelaySeconds: 10
-            periodSeconds: 10
+containers:
+  - name: quotes-api
+    image: quotes-api:latest
+    imagePullPolicy: IfNotPresent
+    ports:
+      - containerPort: 8000
+    readinessProbe:
+      httpGet:
+        path: /healthz
+        port: 8000
+      initialDelaySeconds: 3
+      periodSeconds: 5
+    livenessProbe:
+      httpGet:
+        path: /healthz
+        port: 8000
+      initialDelaySeconds: 10
+      periodSeconds: 10
